<resources>
    <string name="app_name" translatable="false">JOBLINK</string>

    <!-- Strings Login -->
    <string name="login">Login</string>
    <string name="enter_a_email">Type your email</string>
    <string name="enter_a_password">Type your password</string>
    <string name="biometry">Biometry</string>
    <string name="sign_in">Login</string>
    <string name="forgot_your_password">I forgot my password</string>
    <string name="create_an_account">Create Account</string>

    <!-- Strings record choice  !-->
    <string name="select">When selecting the profile, you will be forwarded to the chosen page.</string>
    <string name="title_choice">Welcome to JobLink!</string>
    <string name="select_profile">Select your profile.</string>
    <string name="freelancer">Freelancer</string>
    <string name="client">Client</string>

    <!-- Strings de Cadastro -->
    <string name="name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="birth_date_register">Birth Date</string>
    <string name="cpf_register">Digite seu CPF</string>
    <string name="address_register">Enter your address</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>

    <!-- List Publication -->
    <string name="contact">Get in Touch</string>

    <!-- Strings de Publicação !-->
    <string name="create_publication">Create publish</string>
    <string name="description">Description:</string>
    <string name="image">Image (optional)</string>
    <string name="urgencia">Urgency:</string>
    <string name="urgencia1">Low</string>
    <string name="urgencia2">Average</string>
    <string name="urgencia3">High</string>
    <string name="publish">Publish</string>

    <!-- List Professions  -->
    <string name="descriptions_profession_image">Profession Images</string>

    <!-- SearchFragment -->
    <string name="seek_a_profession">Search for a professional</string>
    <string name="categories">Categories</string>
    <string name="easy_freelancer">Find ease for your service</string>

    <!-- Menu  -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

</resources>