<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="800dp">

            <TextView
                android:id="@+id/tv_create_publication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/create_publication"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edge_field"
                android:fontFamily="@font/rubik_bold"
                android:hint="@string/title_publish"
                android:paddingStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_create_publication" />

            <EditText
                android:id="@+id/description_publish"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/rubik"
                android:hint="@string/description"
                android:paddingStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_title" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/image"
                android:textColor="@color/colorTitles"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_publish" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button2" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorBiometria"
                android:drawableTop="@drawable/icon_publish"
                android:drawableTint="@color/colorPrimary"
                android:paddingTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Spinner
                android:id="@+id/spinner_urgency"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:entries="@array/urgency"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Spinner
                android:id="@+id/spinner_anuncy"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:entries="@array/qual_publication"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_urgency" />

            <Button
                android:id="@+id/btn_publish"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_orange_rounded"
                android:fontFamily="@font/rubik_bold"
                android:padding="15dp"
                android:text="@string/publish"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_anuncy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>